[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/core/Hand.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/shader_wars/Deck.gd" type="Script" id=2]
[ext_resource path="res://src/shader_wars/Discard.gd" type="Script" id=3]
[ext_resource path="res://src/core/Pile.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/shader_wars/Board.gd" type="Script" id=5]
[ext_resource path="res://src/shader_wars/Counters.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/shader_wars/Hand.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="Board" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deck" parent="." instance=ExtResource( 4 )]
script = ExtResource( 2 )
placement = 8

[node name="Discard" parent="." instance=ExtResource( 4 )]
script = ExtResource( 3 )
placement = 6
faceup_cards = true

[node name="Control" parent="Discard" index="0"]
custom_styles/panel = SubResource( 1 )

[node name="Hand" parent="." instance=ExtResource( 1 )]
position = Vector2( 1.12244, 0 )
script = ExtResource( 7 )
placement = 7

[node name="ReshuffleAllDeck" type="Button" parent="."]
margin_left = 9.89948
margin_top = 116.762
margin_right = 200.899
margin_bottom = 136.762
text = "Reshuffle all cards into deck"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReshuffleAllDiscard" type="Button" parent="."]
margin_left = 9.89948
margin_top = 140.334
margin_right = 200.899
margin_bottom = 160.334
text = "Reshuffle all cards into discard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Debug" type="CheckButton" parent="."]
margin_left = 789.192
margin_top = 3.36737
margin_right = 978.192
margin_bottom = 43.3674
pressed = true
text = "Debug"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Counters" parent="." instance=ExtResource( 6 )]
[connection signal="pressed" from="ReshuffleAllDeck" to="." method="_on_ReshuffleAllDeck_pressed"]
[connection signal="pressed" from="ReshuffleAllDiscard" to="." method="_on_ReshuffleAllDiscard_pressed"]
[connection signal="toggled" from="Debug" to="." method="_on_Debug_toggled"]

[editable path="Discard"]
